Updated SCM information

--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,9 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-cmis.git</developerConnection>
+        <connection>scm:git:git@github.com:bonitasoft/bonita-connector-cmis.git</connection>
+        <url>https://github.com/bonitasoft/bonita-connector-cmis</url>
+        <tag>HEAD</tag>
     </scm>
+
 </project>
