--- a/bonita-connector-cmis-common/pom.xml
+++ b/bonita-connector-cmis-common/pom.xml
@@ -48,6 +48,14 @@
                     <groupId>javax.xml.ws</groupId>
                 </exclusion>
                 <exclusion>
+                 	<groupId>com.sun.xml.bind</groupId>
+                    <artifactId>jaxb-impl</artifactId>
+                </exclusion>
+                  <exclusion>
+                 	<groupId>com.sun.xml.ws</groupId>
+                    <artifactId>jaxws-rt</artifactId>
+                </exclusion>
+                <exclusion>
                     <artifactId>junit</artifactId>
                     <groupId>junit</groupId>
                 </exclusion>
