BI-299 Update delete docuemnt version connector Now based on a document path and a version label (instead of a unique version id), add tests

--- a/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument.properties
+++ b/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument.properties
@@ -20,5 +20,7 @@ repository.label=Repository name
 repository.description=Enter the name of the repository to retrieve the Document from\
 from.\
 Eg. Main repository
-document_id.label=Version id
-document_id.description=Enter the ID of the version of the document to delete
+documentPath.label=Document path
+documentPath.description=Enter the path to the document
+versionLabel.label=Version label
+versionLabel.description=Enter the label of the version of the document to delete
