--- a/bonita-connector-cmis-deleteversionofdocument-impl/pom.xml
+++ b/bonita-connector-cmis-deleteversionofdocument-impl/pom.xml
@@ -25,6 +25,17 @@
             <artifactId>bonita-connector-cmis-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+          <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
