--- a/bonita-connector-cmis-uploadnewversionofdocument-impl/pom.xml
+++ b/bonita-connector-cmis-uploadnewversionofdocument-impl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.bonitasoft.connectors</groupId>
         <artifactId>bonita-connector-cmis</artifactId>
-        <version>6.1.0-SNAPSHOT</version>
+        <version>6.1.0-rc-06</version>
     </parent>
 
     <properties>
