--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>bonita-connectors</artifactId>
         <groupId>org.bonitasoft.connectors</groupId>
-<version>6.2.0-rc-01</version>
+<version>6.2.0.alpha-01</version>
     </parent>
 
     <artifactId>bonita-connector-cmis</artifactId>
