--- a/bonita-connector-cmis-deletefolder-def/pom.xml
+++ b/bonita-connector-cmis-deletefolder-def/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.bonitasoft.connectors</groupId>
         <artifactId>bonita-connector-cmis</artifactId>
-        <version>6.2.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>bonita-connector-cmis-deletefolder-def</artifactId>
