BS-2821 Use new assembly

--- a/bonita-connector-cmis-deleteversionofdocument-impl/pom.xml
+++ b/bonita-connector-cmis-deleteversionofdocument-impl/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>bonita-connector-cmis-common</artifactId>
-            <version>${project.version}</version>
+            <version>${cmis.common.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
