--- a/bonita-connector-cmis-createfolder-impl/pom.xml
+++ b/bonita-connector-cmis-createfolder-impl/pom.xml
@@ -7,7 +7,6 @@
         <version>1.0.0</version>
     </parent>
     
-
     <artifactId>bonita-connector-cmis-createfolder-impl</artifactId>
 
     <properties>
@@ -23,7 +22,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>bonita-connector-cmis-common</artifactId>
-            <version>${project.version}</version>
+            <version>${cmis.common.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
