--- a/bonita-connector-cmis-deletedocument-impl/pom.xml
+++ b/bonita-connector-cmis-deletedocument-impl/pom.xml
@@ -9,21 +9,22 @@
     </parent>
 
     <artifactId>bonita-connector-cmis-deletedocument-impl</artifactId>
+    <version>1.0.0</version>
 
     <properties>
-        <implementation.id>cmis-deletedocument</implementation.id>
+        <definition.version>1.0.0</definition.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>bonita-connector-cmis-deletedocument-def</artifactId>
-            <version>${project.version}</version>
+            <version>${definition.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>bonita-connector-cmis-common</artifactId>
-            <version>${cmis.common.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
