--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 
 	<artifactId>bonita-connector-cmis</artifactId>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -32,7 +33,6 @@
 
 	<properties>
 		<bonita.engine.version>6.2.0</bonita.engine.version>
-		<cmis.common.version>1.0.0</cmis.common.version>
 	</properties>
 
 	<dependencies>
