BS-2064 Add new client implementation One for Atompub another for Webservice binding Update connector definition to take in input relevant Binding URL Move Integration tests in bonita-connectors-test

--- a/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument.properties
+++ b/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument.properties
@@ -7,7 +7,7 @@ server.pageDescription=Enter the server configuration
 document.pageTitle=Document
 document.pageDescription=Enter the document information
 
-url.label=URL
+url.label=Atompub URL
 url.description=Enter the server address
 binding_type.label=Binding type
 binding_type.description=Select the binding to use for the connection. \
@@ -24,3 +24,15 @@ documentPath.label=Document path
 documentPath.description=Enter the path to the document
 versionLabel.label=Version label
 versionLabel.description=Enter the label of the version of the document to delete
+atompubConfigGroup.label=Atompub configuration
+atompubConfigGroup.description=When using atompub binding you have to provide the atompub URL.
+wsRepositoryServiceUrl.label=RepositoryService URL
+wsRepositoryServiceEndpointUrl.label=RepositoryService endpoint URL
+wsObjectServiceUrl.label=ObjectService URL
+wsObjectServiceEndpointUrl.label=ObjectService endpoint URL
+wsVersioningServiceUrl.label=VersioningService URL
+wsVersioningServiceEndpointUrl.label=VersioningService endpoint URL
+wsNavigationServiceUrl.label=NavigationService URL
+wsNavigationServiceEndpointUrl.label=NavigationService endpoint URL
+wsServiceConfigGroup.label=Service URL Binding (Webservice only)
+wsServiceConfigGroup.description=When using webservice binding you have to provide the CMIS service url (or endpoint url) of your CMIS provider.
