--- a/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument.properties
+++ b/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument.properties
@@ -7,7 +7,7 @@ server.pageDescription=Enter the server configuration
 documentPage.pageTitle=Document
 documentPage.pageDescription=Enter the document information
 
-url.label=URL
+url.label=Atompub URL
 url.description=Enter the server address
 binding_type.label=Binding type
 binding_type.description=Select the binding to use for the connection. \
@@ -22,4 +22,11 @@ from.\
 Eg. Main repository
 remote_document_path.label=Remote document path
 remote_document_path.description=Enter the remote document path of the document to download
-
+atompubConfigGroup.label=Atompub configuration
+atompubConfigGroup.description=When using atompub binding you have to provide the atompub URL.
+wsRepositoryServiceUrl.label=RepositoryService URL
+wsRepositoryServiceEndpointUrl.label=RepositoryService endpoint URL
+wsObjectServiceUrl.label=ObjectService URL
+wsObjectServiceEndpointUrl.label=ObjectService endpoint URL
+wsServiceConfigGroup.label=Service URL Binding (Webservice only)
+wsServiceConfigGroup.description=When using webservice binding you have to provide the CMIS service url (or endpoint url) of your CMIS provider.
