--- a/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder.properties
+++ b/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder.properties
@@ -7,7 +7,7 @@ server.pageDescription=Enter the server configuration
 folder.pageTitle=Folder
 folder.pageDescription=Enter the folder information
 
-url.label=URL
+url.label=Atompub URL
 url.description=Enter the server address
 binding_type.label=Binding type
 binding_type.description=Select the binding to use for the connection. \
@@ -24,3 +24,11 @@ folder_path.label=Parent folder
 folder_path.description=Enter the parent folder path
 subfolder_name.label=Folder name
 subfolder_name.description=Enter the name of the folder to create
+atompubConfigGroup.label=Atompub configuration
+atompubConfigGroup.description=When using atompub binding you have to provide the atompub URL.
+wsRepositoryServiceUrl.label=RepositoryService URL
+wsRepositoryServiceEndpointUrl.label=RepositoryService endpoint URL
+wsObjectServiceUrl.label=ObjectService URL
+wsObjectServiceEndpointUrl.label=ObjectService endpoint URL
+wsServiceConfigGroup.label=Service URL Binding (Webservice only)
+wsServiceConfigGroup.description=When using webservice binding you have to provide the CMIS service url (or endpoint url) of your CMIS provider.
