--- a/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument.properties
+++ b/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument.properties
@@ -7,7 +7,7 @@ server.pageDescription=Enter the server configuration
 document.pageTitle=Document
 document.pageDescription=Enter the document information
 
-url.label=URL
+url.label=Atompub URL
 url.description=Enter the server address
 binding_type.label=Binding type
 binding_type.description=Select the binding to use for the connection. \
@@ -22,3 +22,11 @@ from.\
 Eg. Main repository
 document_path.label=Document
 document_path.description=Enter the path to the document to delete
+atompubConfigGroup.label=Atompub configuration
+atompubConfigGroup.description=When using atompub binding you have to provide the atompub URL.
+wsRepositoryServiceUrl.label=RepositoryService URL
+wsRepositoryServiceEndpointUrl.label=RepositoryService endpoint URL
+wsObjectServiceUrl.label=ObjectService URL
+wsObjectServiceEndpointUrl.label=ObjectService endpoint URL
+wsServiceConfigGroup.label=Service URL Binding (Webservice only)
+wsServiceConfigGroup.description=When using webservice binding you have to provide the CMIS service url (or endpoint url) of your CMIS provider.
