--- a/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder.properties
+++ b/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder.properties
@@ -7,7 +7,7 @@ server.pageDescription=Enter the server configuration
 document.pageTitle=Folder
 document.pageDescription=Enter the Folder information
 
-url.label=URL
+url.label=Atompub URL
 url.description=Enter the server address
 binding_type.label=Binding type
 binding_type.description=Select the binding to use for the connection. \
@@ -22,3 +22,13 @@ from.\
 Eg. Main repository
 folder_path.label=Folder
 folder_path.description=Enter the path to the folder to delete
+atompubConfigGroup.label=Atompub configuration
+atompubConfigGroup.description=When using atompub binding you have to provide atompub URL.
+wsRepositoryServiceUrl.label=RepositoryService URL
+wsRepositoryServiceEndpointUrl.label=RepositoryService endpoint URL
+wsObjectServiceUrl.label=ObjectService URL
+wsObjectServiceEndpointUrl.label=ObjectService endpoint URL
+wsServiceConfigGroup.label=Service URL Binding (Webservice only)
+wsServiceConfigGroup.description=When using webservice binding you have to provide the CMIS service url of your CMIS provider.
+wsEndpointConfigGroup.label=Service Endpoint URL Binding (Webservice only)
+wsEndpointConfigGroup.description=When using webservice binding you have to provide the CMIS service endpoint url of your CMIS provider.
