--- a/bonita-connector-cmis-uploadnewversionofdocument-impl/pom.xml
+++ b/bonita-connector-cmis-uploadnewversionofdocument-impl/pom.xml
@@ -10,11 +10,12 @@
 	</parent>
 
 	<properties>
-		<definition.version>1.0.0</definition.version>
+		<definition.version>1.1.0</definition.version>
 	</properties>
 
 	<artifactId>bonita-connector-cmis-uploadnewversionofdocument-impl</artifactId>
-
+    <version>1.1.0</version>
+    
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -24,7 +25,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bonita-connector-cmis-common</artifactId>
-			<version>${project.parent.version}</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
