fix typo in messages

--- a/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument.properties
+++ b/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument.properties
@@ -17,7 +17,7 @@ username.description=Enter the username to use for the connection
 password.label=Password
 password.description=Enter the password to use for the connection
 repository.label=Repository name
-repository.description=Enter the name of the repository to retrive the folder\
+repository.description=Enter the name of the repository to retrieve the folder\
 from.\
 Eg. Main repository
 remote_document_path.label=Remote document path
