--- a/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder.properties
+++ b/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder.properties
@@ -17,7 +17,7 @@ username.description=Enter the username to use for the connection
 password.label=Password
 password.description=Enter the password to use for the connection
 repository.label=Repository name
-repository.description=Enter the name of the repository to retrive the folder\
+repository.description=Enter the name of the repository to retrieve the folder\
 from.\
 Eg. Main repository
 folder_path.label=Folder
