--- a/bonita-connector-cmis-common/pom.xml
+++ b/bonita-connector-cmis-common/pom.xml
@@ -9,13 +9,18 @@
 	</parent>
 
 	<artifactId>bonita-connector-cmis-common</artifactId>
-	<version>2.0.0</version>
+	<version>2.0.1</version>
+    
+    <properties>
+        <opencmis.version>0.11.0</opencmis.version>
+        <cxf.version>2.7.7</cxf.version>
+    </properties>
     
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.chemistry.opencmis</groupId>
 			<artifactId>chemistry-opencmis-client-impl</artifactId>
-			<version>0.11.0</version>
+			<version>${opencmis.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>saaj-impl</artifactId>
@@ -63,6 +68,26 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+       <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxws</artifactId>
+            <version>${cxf.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jaxb-api</artifactId>
+                    <groupId>javax.xml.bind</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.xml.bind</groupId>
+                    <artifactId>jaxb-impl</artifactId>
+                </exclusion>
+            </exclusions>
+       </dependency>
+       <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
