--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 		<module>bonita-connector-cmis-deleteversionofdocument-impl</module>
 		<module>bonita-connector-cmis-downloaddocument-def</module>
 		<module>bonita-connector-cmis-downloaddocument-impl</module>
+		<module>bonita-connector-cmis-listdocuments-def</module>
+		<module>bonita-connector-cmis-listdocuments-impl</module>
 		<module>bonita-connector-cmis-uploadnewdocument-def</module>
 		<module>bonita-connector-cmis-uploadnewdocument-impl</module>
 		<module>bonita-connector-cmis-uploadnewversionofdocument-def</module>
